--- a/public/style.css
+++ b/public/style.css
@@ -20,10 +20,11 @@ label {
   justify-content: space-between;
   color: white;
   background-color: black;
+  min-height: 7vh;
 }
 
 .nav-item {
-  margin: .5em;
+  margin: .25em .5em .25em .5em;
 }
 
 .navbar a {
@@ -92,11 +93,63 @@ img {
   align-self: flex-end;
 }
 
-.flex-column h1 {
+.flex-column .quote {
   font-family: 'Palatino', serif;
   font-style: oblique;
 }
 
+#carousel {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  min-height: 60vh;
+  flex-wrap: wrap-reverse;
+}
+
+#carousel-imgs {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  flex: 1 1 auto;
+  width: 45vw;
+  height: 60vh;
+  min-width: 350px;
+}
+
+#img-quotes {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 45vw;
+  flex: 1 1 auto;
+  min-width: 350px;
+}
+
+#img-quotes h1 {
+  position: absolute;
+  width: inherit;
+  opacity: 1;
+  transition: opacity 1s;
+}
+#img-quotes h1.hidden {
+  opacity: 0;
+}
+
+#carousel img {
+  position: absolute;
+  width: inherit;
+  height: auto;
+  opacity: 1;
+  transition: opacity 1s;
+}
+
+#carousel img.hidden {
+  opacity: 0;
+}
 form div {
   margin: 1em;
   display: inline-block;
