--- a/public/style.css
+++ b/public/style.css
@@ -106,7 +106,7 @@ img {
   flex-wrap: wrap-reverse;
 }
 
-#carousel-imgs {
+.carousel-imgs {
   position: relative;
   display: flex;
   justify-content: center;
@@ -114,28 +114,20 @@ img {
   overflow: hidden;
   flex: 1 1 auto;
   width: 45vw;
-  height: 60vh;
+  /* height: 60vh; */
   min-width: 350px;
-}
-
-#img-quotes {
-  display: flex;
-  position: relative;
-  justify-content: center;
-  align-items: center;
   text-align: center;
-  width: 45vw;
-  flex: 1 1 auto;
-  min-width: 350px;
 }
 
-#img-quotes h1 {
+.carousel-imgs h1 {
   position: absolute;
-  width: inherit;
+  width: 100%;
+  height: 20vh;
   opacity: 1;
   transition: opacity 1s;
 }
-#img-quotes h1.hidden {
+
+.carousel-imgs h1.hidden {
   opacity: 0;
 }
 
