--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,8 @@ label {
   display: block;
 }
 
+/* navbar */
+
 .navbar {
   display: flex;
   flex-wrap: wrap;
@@ -32,15 +34,25 @@ label {
   color: white;
 }
 
+/* footer */
+
 #footer {
   display: flex;
   justify-content: center;
+  align-items: center;
   color: white;
   background-color: black;
   width: 100%;
+  min-height: 5vh;
 }
 
-img {
+#footer p {
+  margin: 0;
+}
+
+/* homepage */
+
+#landing {
   width: 100%;
 }
 
@@ -114,7 +126,6 @@ img {
   overflow: hidden;
   flex: 1 1 auto;
   width: 45vw;
-  /* height: 60vh; */
   min-width: 350px;
   text-align: center;
 }
@@ -142,7 +153,50 @@ img {
 #carousel img.hidden {
   opacity: 0;
 }
-form div {
-  margin: 1em;
-  display: inline-block;
+
+/* contact */
+
+#contact {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 95vh;
+  background-image: url('/images/contact/form.jpg');
+  background-size: cover;
+}
+
+#contact form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#contact .form-item {
+  margin: 10px;
+  min-width: 300px;
+  height: 35px;
+  border-radius: 10px;
+  border: none;
+  padding: 0 10px;
+}
+
+#contact #contact-details {
+  height: 30vh;
+  width: 30vw;
+  padding-top: 5px;
+  font-family: Arial, Helvetica, sans-serif
+}
+
+#contact #contact-button{
+  min-width: 100px;
+  background-color: steelblue;
+  color: white;
+  font-weight: bold;  
+  outline: none;
+}
+
+#contact #contact-button:active{
+  background-color: rgb(39, 102, 153);
 }
