--- a/public/style.css
+++ b/public/style.css
@@ -177,16 +177,18 @@ label {
   margin: 10px;
   min-width: 300px;
   height: 35px;
-  border-radius: 10px;
+  border-radius: 5px;
   border: none;
   padding: 0 10px;
+  outline: none;
 }
 
 #contact #contact-details {
   height: 30vh;
   width: 30vw;
   padding-top: 5px;
-  font-family: Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
+  resize: none;
 }
 
 #contact #contact-button{
@@ -199,4 +201,14 @@ label {
 
 #contact #contact-button:active{
   background-color: rgb(39, 102, 153);
+}
+
+/* About */
+
+#about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 95vh;
 }
