--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,7 @@ label {
   color: white;
   background-color: black;
   min-height: 7vh;
+  z-index: 2;
 }
 
 .nav-item {
@@ -92,7 +93,7 @@ label {
   font-size: 20px;
 }
 
-#home img {
+#home #landing {
   min-width: 800px;
 }
 
@@ -135,45 +136,46 @@ label {
 
 #carousel {
   display: flex;
-  justify-content: center;
-  width: 100%;
+  justify-content: space-evenly;
+  width: 100vw;
   min-height: 60vh;
   flex-wrap: wrap-reverse;
 }
 
-.carousel-imgs {
+.carousel-group {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 50vw;
+  min-width: 600px;
+  min-height: 60vh;
+  text-align: center;
   overflow: hidden;
   flex: 1 1 auto;
-  width: 45vw;
-  min-width: 350px;
-  text-align: center;
 }
 
-.carousel-imgs h1 {
+.carousel-quotes {
+  min-height: 35vh;
+}
+
+.carousel-quotes h1 {
+  margin: 5px;
   position: absolute;
-  width: 100%;
-  height: 20vh;
+  max-width: 97vw;
   opacity: 1;
   transition: opacity 1s;
 }
 
-.carousel-imgs h1.hidden {
-  opacity: 0;
-}
 
-#carousel img {
+.carousel-group img {
   position: absolute;
-  width: inherit;
-  height: auto;
+  height: 100%;
   opacity: 1;
   transition: opacity 1s;
 }
 
-#carousel img.hidden {
+.carousel-group .hidden {
   opacity: 0;
 }
 
